// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmailInvitationFormDialog > renders the form with the join rule confirmation 1`] = `
<div>
  <form
    class="_root_1o4d9_17 sc-gKckzE XAfzC"
  >
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="_flex_4dswl_9 sc-bdvwhi eEBmvr"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
      >
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
        >
          <svg
            fill="var(--cpd-color-icon-info-primary)"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
            />
            <path
              clip-rule="evenodd"
              d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
          >
            Guests will have limited access to the app
          </span>
        </div>
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
        >
          <svg
            fill="var(--cpd-color-icon-info-primary)"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16.1 13.3-1.45-1.45q.225-1.175-.675-2.2t-2.325-.8L10.2 7.4q.424-.2.863-.3A4.2 4.2 0 0 1 12 7q1.875 0 3.188 1.312Q16.5 9.625 16.5 11.5q0 .5-.1.938t-.3.862m3.2 3.15-1.45-1.4a11 11 0 0 0 1.688-1.588A9 9 0 0 0 20.8 11.5q-1.25-2.524-3.588-4.013Q14.875 6 12 6q-.724 0-1.425.1a10 10 0 0 0-1.375.3L7.65 4.85A11.1 11.1 0 0 1 12 4q3.575 0 6.425 1.887T22.7 10.8a.8.8 0 0 1 .1.313q.025.188.025.387a2 2 0 0 1-.125.7 10.9 10.9 0 0 1-3.4 4.25m-.2 5.45-3.5-3.45q-.874.274-1.762.413Q12.95 19 12 19q-3.575 0-6.425-1.887T1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.763.8.8 0 0 1 .1-.3Q1.825 9.7 2.55 8.75A13.3 13.3 0 0 1 4.15 7L2.075 4.9a.93.93 0 0 1-.275-.688q0-.412.3-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275l17 17q.275.275.288.688a.93.93 0 0 1-.288.712.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275M5.55 8.4q-.725.65-1.325 1.425A9 9 0 0 0 3.2 11.5q1.25 2.524 3.588 4.012T12 17q.5 0 .975-.062.475-.063.975-.138l-.9-.95q-.274.075-.525.113A3.5 3.5 0 0 1 12 16q-1.875 0-3.187-1.312Q7.5 13.375 7.5 11.5q0-.274.038-.525.037-.25.112-.525z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
          >
            They will not have access to the full chat history
          </span>
        </div>
      </div>
      <div
        class="_flex_4dswl_9 sc-gsDMPd bEfhHy"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-6x); --mx-flex-wrap: nowrap;"
      >
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
        >
          <span
            class="_typography_6v6n8_153 _font-body-md-semibold_6v6n8_55"
          >
            Currently this room doesn't allow guests
          </span>
          <span
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 sc-dkPwfY eoWMih"
          >
            Check the box below to confirm you want change room access to allow guests in
          </span>
        </div>
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_153f2_10"
            >
              <input
                class="_input_153f2_18"
                id="radix-_r_0_"
                name="joinRule"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_153f2_19"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-_r_0_"
            >
              Change room access to Ask to join
            </label>
          </div>
        </div>
      </div>
      <div
        class="_flex_4dswl_9 _pillInput_fb9j9_8"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
      >
        <input
          autocomplete="off"
          class="_input_fb9j9_24"
          placeholder="Enter an email address"
        />
      </div>
    </div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_1nw83_8 sc-hKwBjT cOcblk"
        data-kind="secondary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled="true"
        class="_button_1nw83_8 sc-hKwBjT cOcblk"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="submit"
      >
        Send invite to guest
      </button>
    </div>
  </form>
</div>
`;

exports[`EmailInvitationFormDialog > submits the entered emails and the join rule change 1`] = `
<div>
  <form
    class="_root_1o4d9_17 sc-gKckzE XAfzC"
  >
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="_flex_4dswl_9 sc-bdvwhi eEBmvr"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
      >
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
        >
          <svg
            fill="var(--cpd-color-icon-info-primary)"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
            />
            <path
              clip-rule="evenodd"
              d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
          >
            Guests will have limited access to the app
          </span>
        </div>
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
        >
          <svg
            fill="var(--cpd-color-icon-info-primary)"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16.1 13.3-1.45-1.45q.225-1.175-.675-2.2t-2.325-.8L10.2 7.4q.424-.2.863-.3A4.2 4.2 0 0 1 12 7q1.875 0 3.188 1.312Q16.5 9.625 16.5 11.5q0 .5-.1.938t-.3.862m3.2 3.15-1.45-1.4a11 11 0 0 0 1.688-1.588A9 9 0 0 0 20.8 11.5q-1.25-2.524-3.588-4.013Q14.875 6 12 6q-.724 0-1.425.1a10 10 0 0 0-1.375.3L7.65 4.85A11.1 11.1 0 0 1 12 4q3.575 0 6.425 1.887T22.7 10.8a.8.8 0 0 1 .1.313q.025.188.025.387a2 2 0 0 1-.125.7 10.9 10.9 0 0 1-3.4 4.25m-.2 5.45-3.5-3.45q-.874.274-1.762.413Q12.95 19 12 19q-3.575 0-6.425-1.887T1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.763.8.8 0 0 1 .1-.3Q1.825 9.7 2.55 8.75A13.3 13.3 0 0 1 4.15 7L2.075 4.9a.93.93 0 0 1-.275-.688q0-.412.3-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275l17 17q.275.275.288.688a.93.93 0 0 1-.288.712.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275M5.55 8.4q-.725.65-1.325 1.425A9 9 0 0 0 3.2 11.5q1.25 2.524 3.588 4.012T12 17q.5 0 .975-.062.475-.063.975-.138l-.9-.95q-.274.075-.525.113A3.5 3.5 0 0 1 12 16q-1.875 0-3.187-1.312Q7.5 13.375 7.5 11.5q0-.274.038-.525.037-.25.112-.525z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
          >
            They will not have access to the full chat history
          </span>
        </div>
      </div>
      <div
        class="_flex_4dswl_9 sc-gsDMPd bEfhHy"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-6x); --mx-flex-wrap: nowrap;"
      >
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
        >
          <span
            class="_typography_6v6n8_153 _font-body-md-semibold_6v6n8_55"
          >
            Currently this room doesn't allow guests
          </span>
          <span
            class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 sc-dkPwfY eoWMih"
          >
            Check the box below to confirm you want change room access to allow guests in
          </span>
        </div>
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_153f2_10"
            >
              <input
                class="_input_153f2_18"
                id="radix-_r_1_"
                name="joinRule"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_153f2_19"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-_r_1_"
            >
              Change room access to Ask to join
            </label>
          </div>
        </div>
      </div>
      <div
        class="_flex_4dswl_9 _pillInput_fb9j9_8"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
      >
        <div
          class="_flex_4dswl_9"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: wrap;"
        >
          <div
            class="_flex_4dswl_9 _pill_v00ef_8"
            style="--mx-flex-display: inline-flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
          >
            <div
              aria-hidden="true"
              class="_flex_4dswl_9 sc-eCIkAO dttajI"
              style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            >
              @
            </div>
            <span
              class="_label_v00ef_14"
              id="_r_2_"
            >
              alice@example.com
            </span>
            <button
              aria-describedby="_r_2_"
              aria-label="action|delete"
              class="_icon-button_1215g_8 _icon_v00ef_19 mx_Dialog_nonDialogButton"
              data-kind="primary"
              role="button"
              style="--cpd-icon-button-size: 16px;"
              tabindex="0"
            >
              <div
                class="_indicator-icon_j097f_17"
                style="--cpd-icon-button-size: 100%;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                  />
                </svg>
              </div>
            </button>
          </div>
          <div
            class="_flex_4dswl_9 _pill_v00ef_8 sc-jRQBiJ bqeDSP"
            style="--mx-flex-display: inline-flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
          >
            <svg
              color="var(--cpd-color-icon-critical-primary)"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12t2.325 5.675T12 20"
              />
            </svg>
            <span
              class="_label_v00ef_14"
              id="_r_3_"
            >
              not-an-email
            </span>
            <button
              aria-describedby="_r_3_"
              aria-label="action|delete"
              class="_icon-button_1215g_8 _icon_v00ef_19 mx_Dialog_nonDialogButton"
              data-kind="primary"
              role="button"
              style="--cpd-icon-button-size: 16px;"
              tabindex="0"
            >
              <div
                class="_indicator-icon_j097f_17"
                style="--cpd-icon-button-size: 100%;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                  />
                </svg>
              </div>
            </button>
          </div>
          <div
            class="_flex_4dswl_9 _pill_v00ef_8"
            style="--mx-flex-display: inline-flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
          >
            <div
              aria-hidden="true"
              class="_flex_4dswl_9 sc-eCIkAO dttajI"
              style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            >
              @
            </div>
            <span
              class="_label_v00ef_14"
              id="_r_4_"
            >
              bob@example.com
            </span>
            <button
              aria-describedby="_r_4_"
              aria-label="action|delete"
              class="_icon-button_1215g_8 _icon_v00ef_19 mx_Dialog_nonDialogButton"
              data-kind="primary"
              role="button"
              style="--cpd-icon-button-size: 16px;"
              tabindex="0"
            >
              <div
                class="_indicator-icon_j097f_17"
                style="--cpd-icon-button-size: 100%;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <input
          autocomplete="off"
          class="_input_fb9j9_24"
          placeholder="Enter an email address"
        />
      </div>
    </div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_1nw83_8 sc-hKwBjT cOcblk"
        data-kind="secondary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled="true"
        class="_button_1nw83_8 sc-hKwBjT cOcblk"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="submit"
      >
        Send invite to guest
      </button>
    </div>
  </form>
</div>
`;
